[package]
name = "stijl"
version = "0.1.0"
authors = ["Ed McCardell <edmccard@hotmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/edmccard/tvis"
description = """
Simple styled text streams
"""

[dependencies]
tinf = { path = "../tinf", version = "^0" }
lazy_static = "0.2.8"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.23"
