[package]
name = "stijl"
version = "0.2.2"
authors = ["Ed McCardell <edmccard@hotmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/edmccard/tvis"
description = """
Cross-platform simple styled text streams
"""

[dependencies]
tinf = { path = "../tinf", version = "^0" }
tvis_util = { path = "../tvis_util", version = "^0" }
lazy_static = "0.2.8"
libc = "0.2.23"
