[package]
name = "stijl"
version = "0.5.2"
authors = ["Ed McCardell <edmccard@hotmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/edmccard/tvis"
description = """
Cross-platform simple styled text streams
"""

[dependencies]
tinf = { path = "../tinf", version = "^0" }
tvis_util = { path = "../tvis_util", version = "^0" }
libc = "0.2.32"

[target."cfg(windows)".dependencies]
winapi = "0.2.8"
kernel32-sys = "0.2.2"
