[package]
name = "tinf"
version = "0.11.0"
authors = ["Ed McCardell <edmccard@hotmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/edmccard/tvis"
description = """
A library for using terminfo capabilities.
"""

categories = ["command-line-interface"]
keywords = ["terminfo", "terminal"]

[badges]
travis-ci = { repository = "edmccard/tvis" }
