[package]
name = "tvis"
version = "0.14.0"
authors = ["Ed McCardell <edmccard@hotmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/edmccard/tvis"
description = """
A console/terminal UI library (very alpha! such WIP!)
"""

[dependencies]
tinf = { path = "../tinf", version = "^0" }
tvis_util = { path = "../tvis_util", version = "^0" }
libc = "0.2.23"

[badges]
travis-ci = { repository = "edmccard/tvis" }
