[package]
name = "tvis"
version = "0.14.2"
authors = ["Ed McCardell <edmccard@hotmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/edmccard/tvis"
description = """
A console/terminal UI library (very alpha! such WIP!)
"""

[dependencies]
tinf = { path = "../tinf", version = "^0" }
tvis_util = { path = "../tvis_util", version = "^0" }
bitflags = "1.0.0"
libc = "0.2.23"

[target.'cfg(not(windows))'.dependencies]
lazy_static = "0.2.8"

[target.'cfg(windows)'.dependencies]
winapi = "0.2.8"
user32-sys = "0.2.0"
kernel32-sys = "0.2.2"

[badges]
travis-ci = { repository = "edmccard/tvis" }
