[package]
name = "tvis"
version = "0.15.2"
authors = ["Ed McCardell <edmccard@hotmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/edmccard/tvis"
description = """
A console/terminal UI library (very alpha! such WIP!)
"""

[dependencies]
tvis_util = { path = "../tvis_util", version = "^0" }
bitflags = "1.0.0"
libc = "0.2.32"

[target.'cfg(not(windows))'.dependencies]
tinf = { path = "../tinf", version = "^0" }
lazy_static = "0.2.9"

[target.'cfg(windows)'.dependencies]
winapi = "0.2.8"
user32-sys = "0.2.0"
kernel32-sys = "0.2.2"

[badges]
travis-ci = { repository = "edmccard/tvis" }
