[package]
name = "tvis_util"
version = "0.3.0"
authors = ["Ed McCardell <edmccard@hotmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/edmccard/tvis"
description = """
Cross-platform utility functions for terminal interfaces.
"""

[dependencies]
libc = "0.2.23"
lazy_static = "0.2.8"
