[package]
name = "tvis_util"
version = "0.5.2"
authors = ["Ed McCardell <edmccard@hotmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/edmccard/tvis"
description = """
Cross-platform utility functions for terminal interfaces.
"""

[dependencies]
libc = "0.2.32"
lazy_static = "0.2.9"

[target.'cfg(windows)'.dependencies]
winapi = "0.2.8"
kernel32-sys = "0.2.2"
advapi32-sys = "0.2.0"
